# toy-robot-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/arch/: 001-initial-design.md  002-encapsulate-internal-state.md
tests/domain/: test_position.py  test_robot.py  test_table.py  test_turning.py
toy_robot/: action.py  console.py  state.py
toy_robot/domain/: position.py  robot.py  table.py
