[tool.poetry]
name = "toy-robot"
version = "0.1.0"
description = ""
authors = ["Khoa Le <ltkhoa2711@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
