[tool.black]
# use a more generous line length than the default 88
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true

[tool.poetry]
name = "toy-robot"
version = "0.1.0"
description = ""
authors = ["Khoa Le <ltkhoa2711@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^3.9.1"
hypothesis = "^6.54.5"
black = "^24.3.0"
pytest-cov = "^3.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
